--- a/airplane.cabal
+++ b/airplane.cabal
@@ -25,7 +25,7 @@ executable airplane
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules:    Plane, TupleShow
+    other-modules:    Plane, TupleShow, Matcher
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
