--- a/airplane.cabal
+++ b/airplane.cabal
@@ -1,4 +1,4 @@
-cabal-version:      2.4
+cabal-version:      3.6
 name:               airplane
 version:            0.1.0.0
 
@@ -29,7 +29,7 @@ executable airplane
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.14.1.0, split ^>=0.2.3.4
+    build-depends:    base ^>=4.14.3.0, split ^>=0.2.3.4, containers ^>=0.6.5.1
     hs-source-dirs:   app
     default-language: Haskell2010
 
