--- a/.github/workflows/cabal-build.yml
+++ b/.github/workflows/cabal-build.yml
@@ -5,9 +5,17 @@ jobs:
     name: Build with Cabal
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: haskell/actions/setup@v1
+      - name: Checkout repo
+        uses: actions/checkout@v2
+      - name: Setup Haskell
+        uses: haskell/actions/setup@v1
         with:
           ghc-version: '8.10.7'
           cabal-version: '3.6.0.0'
-      - run: cabal build
+      - name: Build with Cabal
+        run: cabal build
+      - name: Upload binary
+        uses: actions/upload-artifact@v2
+        with:
+          name: airplane
+          path: dist-newstyle/build/*/*/*/*/*/build/airplane/airplane
